--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercice_cv_bruno</title>
+    <title>noTitle</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
